# model/address_model.go
@@ -7,18 +7,18 @@ import (
 )
 
 type Address struct {
-	ID          int64
-	UserAddress string    `gorm:"unique;comment:'钱包地址';"json:"user_address"`                               //地址
-	EthAmount   float64   `gorm:"default:0;comment:'以太币余额';";json:"eth_amount"`                            //以太币余额
-	UsdtAmount  float64   `gorm:"default:0;comment:'泰达币余额';";json:"usdt_amount"`                           //泰达币余额
-	UserId      int       `gorm:"TYPE:int(11);NOT NULL;INDEX";json:"user_id"`                              //组织id
-	AdminUser   AdminUser `json:"admin_user";gorm:"foreignkey:UserId"`                                     //指定关联外键
-	Symbol      string    `gorm:"default:'eth';comment:'币种';"json:"symbol"`                                // 币种
-	Pwd         string    `gorm:"default:'';comment:'加密私钥'";json:"pwd"`                                    // 加密私钥
-	Status      int       `gorm:"default:1;comment:'状态 0：所有，1：已完成，2：执行中，3：结账中';";json:"status"`            //状态 状态 0：所有，1：已完成，2：执行中，3：结账中
-	UseTag      int64     `gorm:"default:0;comment:'占用标志 -1 作为热钱包占用-0 未占用->其他 作为用户冲币地址占用'";json:"use_tag"` // 占用标志 -1 作为热钱包占用-0 未占用->0 作为用户冲币地址占用
-	CreateTime  int64     `gorm:"default:0;comment:'创建时间戳'";json:"create_time"`                            //创建时间戳
-	UpdateTime  int64     `gorm:"default:0;comment:'更新时间戳'";json:"update_time"`                            //更新时间戳
+	ID           int64
+	UserAddress  string    `gorm:"unique;comment:'钱包地址';"json:"user_address"`                               //地址
+	EthAmount    float64   `gorm:"default:0;comment:'以太币余额';";json:"eth_amount"`                            //以太币余额
+	UsdtAmount   float64   `gorm:"default:0;comment:'泰达币余额';";json:"usdt_amount"`                           //泰达币余额
+	UserId       int       `gorm:"default:0;comment:'用户id';";json:"user_id"`                              //组织id
+	Symbol       string    `gorm:"default:'eth';comment:'币种';"json:"symbol"`                                // 币种
+	Pwd          string    `gorm:"default:'';comment:'加密私钥'";json:"pwd"`                                    // 加密私钥
+	Status       int       `gorm:"default:1;comment:'状态 0：所有，1：已完成，2：执行中，3：结账中';";json:"status"`            //状态 状态 0：所有，1：已完成，2：执行中，3：结账中
+	HandleStatus int       `gorm:"default:1;comment:'指派状态 0：所有，1：启用，2：停用';";json:"status"`                  //指派状态 0：所有，1：启用，2：停用
+	UseTag       int64     `gorm:"default:0;comment:'占用标志 -2：作为eth钱包占用， -1：作为热钱包占用 ，0：未占用->其他 作为用户冲币地址占用'";json:"use_tag"` // HandleStatus
+	CreateTime   int64     `gorm:"default:0;comment:'创建时间戳'";json:"create_time"`                            //创建时间戳
+	UpdateTime   int64     `gorm:"default:0;comment:'更新时间戳'";json:"update_time"`                            //更新时间戳
 }
 
 //查询所有收款地址
@@ -39,6 +39,13 @@ func (a *Address) GetAllAddress(page, pageSize int, where ...interface{}) (respo
 		all.Data[index].RealName = GetUserByWhere("id = ?", v.UserId).RealName
 	}
 	return all, err
+}
+
+//随机获取相对应数量的空闲地址
+func GetFreAddress(num int64)([]Address,  error) {
+	var rows []Address
+	s := Getdb().Raw("SELECT * FROM address WHERE use_tag = 0 ORDER BY RAND() LIMIT ?",num).Scan(&rows).Error
+	return rows,s
 }
 
 //新增用户收款地址
@@ -82,16 +89,17 @@ func (a *Address) EditAddress(address request.AddressEdit) error {
 }
 
 //启用 停用
-func (a *Address) OpenOrStopAddress(address request.OpenOrStopAddress) error {
+func OpenOrStopAddress(handleStatus int,address []Address)(err error) {
 	tx := Getdb().Begin()
-	addresss := GetAddressByWhere("id = ?", address.Id)
-	if err := tx.Model(&addresss).
-		Updates(Address{UseTag: address.UseTag}).Error; err != nil {
-		tx.Rollback()
-		return err
+	for _,v := range address{
+		if err = tx.Model(&v).
+			Updates(Address{HandleStatus: handleStatus}).Error; err != nil {
+			tx.Rollback()
+			return err
+			tx.Commit()
+		}
 	}
-	tx.Commit()
-	return nil
+	return err
 }
 
 //储值
@@ -134,17 +142,17 @@ func (a *Address) Col(address request.Math) error {
 }
 
 //更新余额
-func Update(ids request.UpdateAmount) (addresses []Address, err error) {
+func UpdateBalance(ids request.UpdateAmount) ( err error) {
+	tx := Getdb().Begin()
 	now := time.Now().Unix()
-	for _, v := range ids.Id {
-		address := GetAddressByWhere("id = ?", v)
-		if err := Getdb().Model(&address).Updates(Address{UpdateTime: now}).Error; err != nil {
-			return nil, err
+	//查询出钱包地址
+	address := GetAllAddress("id in (?)", ids.Id)
+	for _, v := range address{
+		if err := tx.Model(&v).Updates(Address{UpdateTime: now}).Error; err != nil {
+			return  err
 		}
-		addresses = append(addresses, address)
 	}
-
-	return addresses, nil
+	return
 }
 
 // 获取所有收款地址数量
@@ -170,5 +178,13 @@ func GetAddressCount(where ...interface{}) (count int64) {
 // 根据条件获取钱包地址
 func GetAddressByWhere(where ...interface{}) (a Address) {
 	Getdb().First(&a, where...)
+	return
+}
+
+// 根据条件获取钱包地址
+func GetAllAddress(where ...interface{}) (res []Address) {
+	Getdb().Model(Address{}).
+		Order("id asc").
+		Find(&res, where...)
 	return
 }
