# model/request/address_request.go
@@ -1,15 +1,23 @@
 package request
 
+//新增用户收钱地址
+type AddressAdd struct {
+	Num          int64 `json:"num"`                                                 // 生成钱包数量
+	UserId       int   `json:"user_id" example:"1"`                                 //组织id
+	HandleStatus int   `json:"handle_status" example:"1"`               //指派状态 0：所有，1：启用，2：停用
+	UseTag       int64 `json:"use_tag" example:"0"` //-2:eth钱包,-1:热钱包,0:未占用,userId:组织充币钱包
+}
+
 //编辑收款地址
 type AddressEdit struct {
 	Id     int `json:"-"`
-	UserId int `json:"user_id" binding:"required" example:"1"` //组织id
+	UserId int `json:"user_id" binding:"required",example:"1"` //组织id
 }
 
 //启用停用
 type OpenOrStopAddress struct {
-	Id         int `json:"-"`
-	UseTag int64 `json:"hand_status" binding:"oneof=0 1" example:"0：停用，1：启用"` //是否启用
+	Id     []int   `json:"-" binding:"required,unique,min=1" example:"1,2,3,4,5,6"`
+	HandleStatus int `json:"hand_status" example:"1"` //是否启用
 }
 
 //储值
@@ -26,5 +34,5 @@ type Math struct {
 
 //更新余额
 type UpdateAmount struct {
-	Id[]     int `json:"-"`
+	Id []int `json:"-" binding:"required,unique,min=1" example:"1,2,3,4,5,6"`
 }
